# sis-inventario-rust

./: Cargo.toml  Dockerfile  cafeteria  cafeteria.db  readme.md
front/: contratos.ts  inicio.html  inicio.js  inicio.ts  modelos.ts  tsconfig.json
front/css/: estilos.css
front/src/: contratos.ts  inicio.ts  modelos.ts  servicio.ts
inventario-diseño/: componentes.txt  descripcion.aux  descripcion.tex  descripcion.toc  flujo.txt  modeladoDatos.txt  modulos-logicos.txt  plan.txt
src/: cafeteria  cafeteria.db  insumos  main.rs
