[package]
name = "inventario"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
bcrypt = "0.17.0"
chrono = "0.4.41"
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
